k8s/06-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-api
  namespace: mongoapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-api
  template:
    metadata:
      labels:
        app: mongo-api
    spec:
      containers:
        - name: mongo-api
          image: ghcr.io/anton1990/mongo-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
