k8s/02-mongo-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  namespace: mongoapi
  labels:
    app: mongo
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      name: mongo
