k8s/07-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-api
  namespace: mongoapi
spec:
  type: NodePort
  selector:
    app: mongo-api
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
