k8s/14-notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: mongoapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: notification-service
          image: ghcr.io/anton1990/notification-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: mongoapi
spec:
  type: NodePort
  selector:
    app: notification-service
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30083   # Swagger: http://localhost:30083/swagger
