k8s/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoapi-ingress
  namespace: mongoapi
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - antonlukyantsev1990.duckdns.org
      secretName: duckdns-tls
  rules:
    - host: antonlukyantsev1990.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-api
                port:
                  number: 80
          - path: /mongo-express
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
